updated html and css

--- a/public/firstVisit.html
+++ b/public/firstVisit.html
@@ -27,9 +27,10 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <img src="./pictures/Menu_Icon.png" alt="Menu Icon">
+        <!-- <i class="fas fa-ellipsis-v"></i> -->
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div class="collapse navbar-collapse " id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
@@ -41,7 +42,11 @@
               <a class="dropdown-item" href="./chiropractictreatment.html">Chiropractic Treatment</a>
               <a class="dropdown-item" href="./bodylight.html">Bodylight Fat Reduction</a>
               <a class="dropdown-item" href="./beforeandafter.html">Bodylight Before and After Images</a>
-              <a class="dropdown-item" href="./massage.html">Massage</a>
+              <a class="dropdown-item" href="./appliedkinesology.html">Applied Kinesology</a>
+              <a class="dropdown-item" href="./allergyelimination.html">A/SERT</a>
+              <a class="dropdown-item" href="./lowlevellasertherapy.html">Low Level Laser Therapy</a>
+              <a class="dropdown-item" href="./detoxificationtherapy.html">Detoxification Therapy</a>
+              <a class="dropdown-item" href="./nutritionalconsultation.html">Nutritional Consultation</a>
             </div>
           </li>
           <li class="nav-item">
@@ -70,14 +75,13 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">First Visit</h1>
+          <h1 class=" mb-2 text-center" id="titlebar-heading"><i class="fas fa-clipboard-list"></i>&nbsp First Visit
+          </h1>
           </p>
         </div>
       </div>
     </div>
-  </header>
-
-  <!-- / Row -->
+  </header> <!-- / Row -->
 
   <!-- Page Content -->
   <div class="container">
@@ -90,17 +94,23 @@
           <h3>Consultation</h3>
           <img src="./pictures/Sarah_greeting_2.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
             alt="Sara Greeting patient">
-          <p>On your first visit to our office you will be welcomed by our receptionist with a warm smile. You will then
-            be asked to fill out our required forms which will help us gain some information about yourself and your
+          <p>On your first visit to our office you will be welcomed by our receptionist with a warm smile. You
+            will then
+            be asked to fill out our required forms which will help us gain some information about yourself
+            and your
             spinal health. Save time by filling out the forms ahead of time.<a href="./patientdownloads.html"
-              target="_blank"> Click Here to dowload forms!</a> After reviewing your case history, you and the doctor
+              target="_blank"> Click Here to dowload forms!</a> After reviewing your case history, you and the
+            doctor
             will discuss your condition to determine if
             chiropractic
-            care may be of benefit to you. If we find that your condition would be better served by another physician,
+            care may be of benefit to you. If we find that your condition would be better served by another
+            physician,
             you
-            will be referred to a doctor that will be able to help you the most. However, if our doctor feels he can
+            will be referred to a doctor that will be able to help you the most. However, if our doctor feels
+            he can
             help
-            you, we will begin our examination with your consent. Through out this process, our focus is to help you
+            you, we will begin our examination with your consent. Through out this process, our focus is to
+            help you
             achieve your optimal health potential.</p>
         </div>
         <div class="mt-5">
@@ -110,9 +120,12 @@
           <p>After a thorough consultation with the doctor, you will undergo a chiropractic
             examination. This will
             include
-            testing your reflexes and range of motion as well as other standard orthopedic, neurologic, postural, and
-            physical examinations. From this, the doctor will gain valuable information regarding your condition and a
-            better understanding of how chiropractic can help you. If necessary, the doctor may recommend X-rays or
+            testing your reflexes and range of motion as well as other standard orthopedic, neurologic,
+            postural, and
+            physical examinations. From this, the doctor will gain valuable information regarding your
+            condition and a
+            better understanding of how chiropractic can help you. If necessary, the doctor may recommend
+            X-rays or
             refer
             you for additional testing procedures.</p>
           <div class="mt-5">
@@ -120,33 +133,42 @@
             <img src="./pictures/xray.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
               alt="Doctor holding x-ray">
           </div>
-          <p>X-rays are sometimes required to get a full evaluation of a patient's condition. The need for X-ray is
-            considered on a case by case basis. However, if needed, our office has an on-site, state of the art x-ray
+          <p>X-rays are sometimes required to get a full evaluation of a patient's condition. The need for
+            X-ray is
+            considered on a case by case basis. However, if needed, our office has an on-site, state of the
+            art x-ray
             facility for your convenience.</p>
           <div class="mt-5 float-left">
             <h3>Spinal Adjustment</h3>
             <img src="./pictures/spinal_adjustment.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
               alt="Spinal Adjustment">
-            <p>If both you and the doctor decide that chiropractic care is appropriate, spinal adjustments will begin
-              immediately. Other treatment may include low level laser, physical therapies , and/or soft tissue
+            <p>If both you and the doctor decide that chiropractic care is appropriate, spinal adjustments
+              will begin
+              immediately. Other treatment may include low level laser, physical therapies , and/or soft
+              tissue
               therapies.
-              Most of our patients begin to see results from the very first spinal adjustment. Our special gentle, yet
-              effective, alignment of the body is interactive with the patient; gentle enough for kids, yet able to
+              Most of our patients begin to see results from the very first spinal adjustment. Our special
+              gentle, yet
+              effective, alignment of the body is interactive with the patient; gentle enough for kids, yet
+              able to
               restore
               function and movement for the athlete and senior.</p>
             <div class="mt-5 float-left">
               <h3>Home Instructions</h3>
               <img src="./pictures/daily_instructions.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
                 alt="Doctor with Checklist">
-              <p>Prior to leaving, patients will be given instructions on certain activities or procedures to be
+              <p>Prior to leaving, patients will be given instructions on certain activities or procedures to
+                be
                 conducted
-                at home. This may include ice or heat application instructions, avoidance of certain activities or
+                at home. This may include ice or heat application instructions, avoidance of certain
+                activities or
                 positions, as well as home exercises and/or stretches.</p>
               <div class="mt-5 float-left">
                 <h3>Schedule Your Appointment</h3>
                 <img src="./pictures/calendar.jpg" class="rounded mb-4 mr-4 float-left img-responsive"
                   alt="Calendar on Desk">
-                <p>You will be given a convenient appointment time for your follow-up visit. Generally speaking,
+                <p>You will be given a convenient appointment time for your follow-up visit. Generally
+                  speaking,
                   patients
                   are seen within 1-2 days and are provided with a complete review of findings.</p>
               </div>
@@ -181,7 +203,8 @@
             Map)</a>
           <br><span style="color:#3E7CF9"><i class="fas fa-phone"></i></span>&nbspPhone: (785) 332-2186
         </address>
-        <a class="btn btn-outline-primary mt-3 mb-3" href="./contactUs.html">View Available Office Hours &raquo;</a>
+        <a class="btn btn-outline-primary mt-3 mb-3" href="./contactUs.html">View Available Office Hours
+          &raquo;</a>
 
       </div>
       <!-- /Sidebar -->
@@ -198,7 +221,8 @@
         </h3>
         <h5 class="text-white text-center">Oberlin Office: 785-475-2219</h5>
         <h5 class="text-white text-center">St. Francis Clinic: 785-332-2186</h5>
-        <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office Hours
+        <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office
+          Hours
           &raquo;</a>
       </div>
     </div>
@@ -272,7 +296,8 @@
   <!-- Copyright -->
   <footer class="py-2 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;2019 Unger Chiropractic Clinic. All rights
+      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;2019 Unger Chiropractic Clinic. All
+        rights
         reserved.</p>
   </footer>
   <!-- /.container -->
