--- a/public/contactUs.html
+++ b/public/contactUs.html
@@ -21,16 +21,16 @@
 
 <body>
   <!-- Navigation -->
-  <!-- Navigation -->
   <nav class="navbar fixed-top navbar-expand-lg navbar-light bg-light fixed-top">
     <div class="container">
       <a class="navbar-brand" href="index.html">Unger Chiropractic</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <img src="./pictures/Menu_Icon.png" alt="Menu Icon">
+        <!-- <i class="fas fa-ellipsis-v"></i> -->
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div class="collapse navbar-collapse " id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
@@ -42,7 +42,11 @@
               <a class="dropdown-item" href="./chiropractictreatment.html">Chiropractic Treatment</a>
               <a class="dropdown-item" href="./bodylight.html">Bodylight Fat Reduction</a>
               <a class="dropdown-item" href="./beforeandafter.html">Bodylight Before and After Images</a>
-              <a class="dropdown-item" href="./massage.html">Massage</a>
+              <a class="dropdown-item" href="./appliedkinesology.html">Applied Kinesology</a>
+              <a class="dropdown-item" href="./allergyelimination.html">A/SERT</a>
+              <a class="dropdown-item" href="./lowlevellasertherapy.html">Low Level Laser Therapy</a>
+              <a class="dropdown-item" href="./detoxificationtherapy.html">Detoxification Therapy</a>
+              <a class="dropdown-item" href="./nutritionalconsultation.html">Nutritional Consultation</a>
             </div>
           </li>
           <li class="nav-item">
@@ -71,7 +75,7 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Contact</h1>
+          <h1 class=" mb-2 text-center" id="titlebar-heading"><i class="fas fa-map-marked-alt"></i>&nbsp Contact</h1>
           </p>
         </div>
       </div>
