--- a/public/detoxificationtherapy.html
+++ b/public/detoxificationtherapy.html
@@ -27,9 +27,10 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <img src="./pictures/Menu_Icon.png" alt="Menu Icon">
+        <!-- <i class="fas fa-ellipsis-v"></i> -->
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div class="collapse navbar-collapse " id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
@@ -41,7 +42,11 @@
               <a class="dropdown-item" href="./chiropractictreatment.html">Chiropractic Treatment</a>
               <a class="dropdown-item" href="./bodylight.html">Bodylight Fat Reduction</a>
               <a class="dropdown-item" href="./beforeandafter.html">Bodylight Before and After Images</a>
-              <a class="dropdown-item" href="./massage.html">Massage</a>
+              <a class="dropdown-item" href="./appliedkinesology.html">Applied Kinesology</a>
+              <a class="dropdown-item" href="./allergyelimination.html">A/SERT</a>
+              <a class="dropdown-item" href="./lowlevellasertherapy.html">Low Level Laser Therapy</a>
+              <a class="dropdown-item" href="./detoxificationtherapy.html">Detoxification Therapy</a>
+              <a class="dropdown-item" href="./nutritionalconsultation.html">Nutritional Consultation</a>
             </div>
           </li>
           <li class="nav-item">
@@ -114,8 +119,7 @@
           and relieve pain and joint stiffness. To learn more about ionic therapy and the EB-Pro, visit the website
           below.
         </p>
-        <a class="btn btn-outline-primary mt-3 mb-3" href="./chiropractictreatment.html">Back to Chiropractic
-          Treatments
+        <a class="btn btn-outline-primary mt-3 mb-3" href="./chiropractictreatment.html">Back to Utilized Techniques
           &raquo;</a>
       </div>
 
