--- a/public/index.html
+++ b/public/index.html
@@ -29,9 +29,10 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+        <img src="./pictures/Menu_Icon.png" alt="Menu Icon">
+        <!-- <i class="fas fa-ellipsis-v"></i> -->
       </button>
-      <div class="collapse navbar-collapse" id="navbarResponsive">
+      <div class="collapse navbar-collapse " id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
             <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
@@ -43,7 +44,11 @@
               <a class="dropdown-item" href="./chiropractictreatment.html">Chiropractic Treatment</a>
               <a class="dropdown-item" href="./bodylight.html">Bodylight Fat Reduction</a>
               <a class="dropdown-item" href="./beforeandafter.html">Bodylight Before and After Images</a>
-              <a class="dropdown-item" href="./massage.html">Massage</a>
+              <a class="dropdown-item" href="./appliedkinesology.html">Applied Kinesology</a>
+              <a class="dropdown-item" href="./allergyelimination.html">A/SERT</a>
+              <a class="dropdown-item" href="./lowlevellasertherapy.html">Low Level Laser Therapy</a>
+              <a class="dropdown-item" href="./detoxificationtherapy.html">Detoxification Therapy</a>
+              <a class="dropdown-item" href="./nutritionalconsultation.html">Nutritional Consultation</a>
             </div>
           </li>
           <li class="nav-item">
@@ -82,7 +87,8 @@
           <div class="carousel-caption text-center">
             <h1 class="pb-3 pl-3 pr-3">Unger Chiropractic</h1>
             <h3 class="pb-4 pl-3 pr-3">Your journey to superior healing and total wellness can begin today.</h3>
-            <a class="btn btn-outline-light btn-lg" href="./services.html" role="button" target="blank">View
+            <a class="btn btn-outline-light btn-lg" href="./chiropractictreatment.html" role="button"
+              target="blank">View
               Services</a>
           </div>
         </div>
@@ -94,7 +100,8 @@
           <div class="carousel-caption text-center">
             <h1 class="pb-3 pl-3 pr-3 text-sm-center">Unger Chiropractic</h1>
             <h3 class="pb-4 pl-3 pr-3">Your journey to superior healing and total wellness can begin today.</h3>
-            <a class="btn btn-outline-light btn-lg" href="./services.html" role="button" target="blank">View
+            <a class="btn btn-outline-light btn-lg" href="./chiropractictreatment.html" role="button"
+              target="blank">View
               Services</a>
           </div>
         </div>
@@ -185,7 +192,7 @@
           lower back and neck pain, headaches, repetitive stress disorders, sports injuries, work injuries and whiplash.
           Our care is unique. We provide for our patients excellent chiropractic care, applied kinesiology,
           physio-therapy modalities, as well as professional nutritional counseling.</p>
-        <a href="./services.html" class="btn btn-outline-primary mt-3 mb-3">View Services</a>
+        <a href="./chiropractictreatment.html" class="btn btn-outline-primary mt-3 mb-3">View Services</a>
       </div>
       <div class="col-lg-6">
         <div class="card h-100 shadow-lg p-3 bg-white rounded border-0">
