--- a/public/bodylight.html
+++ b/public/bodylight.html
@@ -75,7 +75,8 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Bodylight Fat Reduction<br>
+          <h1 class=" mb-2 text-center" id="titlebar-heading"><i class="fas fa-weight"></i>&nbsp Bodylight Fat
+            Reduction<br>
             and Facial Rejuvenation</h1>
           </p>
         </div>
