--- a/public/allergyelimination.html
+++ b/public/allergyelimination.html
@@ -75,7 +75,8 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Allergy / Sensitivity Elimination<br> and Reprogramming
+          <h1 class=" mb-2 text-center" id="titlebar-heading"><i class="fas fa-allergies"></i>&nbsp Allergy /
+            Sensitivity Elimination<br> and Reprogramming
             Technique (A/SERT)</h1>
           </p>
         </div>
