--- a/public/appliedkinesology.html
+++ b/public/appliedkinesology.html
@@ -75,7 +75,8 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Applied Kinesiology</h1>
+          <h1 class=" mb-2 text-center" id="titlebar-heading"><img src="./pictures/physical_therapy.png"
+              alt="chiropractor icon">&nbsp Applied Kinesiology</h1>
           </p>
         </div>
       </div>
