--- a/public/beforeandafter.html
+++ b/public/beforeandafter.html
@@ -77,7 +77,8 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Bodylight Before and After</h1>
+          <h1 class=" mb-2 text-center" id="titlebar-heading"><i class="far fa-images"></i>&nbsp Bodylight Before and
+            After</h1>
           </p>
         </div>
       </div>
