--- a/public/lowlevellasertherapy.html
+++ b/public/lowlevellasertherapy.html
@@ -75,7 +75,8 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Low Level Laser Therapy</h1>
+          <h1 class=" mb-2 text-center" id="titlebar-heading"><img src="./pictures/laser.png" alt="laser icon">&nbsp Low
+            Level Laser Therapy</h1>
           </p>
         </div>
       </div>
