--- a/public/nutritionalconsultation.html
+++ b/public/nutritionalconsultation.html
@@ -75,7 +75,9 @@
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-lg-12">
-          <h1 class=" mb-2 text-center" id="titlebar-heading">Nutritional Consultation</h1>
+          <h1 class=" mb-2 text-center" id="titlebar-heading"><img src="./pictures/supplement.png"
+              alt="supplements icon">&nbspNutritional
+            Consultation</h1>
           </p>
         </div>
       </div>
