--- a/public/allergyelimination.html
+++ b/public/allergyelimination.html
@@ -40,6 +40,7 @@
               href="./services.html" target="blank" aria-expanded="false">Services</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="./chiropractictreatment.html">Chiropractic Treatment</a>
+              <a class="dropdown-item" href="./massage.html">Massage</a>
               <a class="dropdown-item" href="./bodylight.html">Bodylight Fat Reduction</a>
               <a class="dropdown-item" href="./beforeandafter.html">Bodylight Before and After Images</a>
               <a class="dropdown-item" href="./appliedkinesology.html">Applied Kinesology</a>
@@ -190,12 +191,13 @@
     <div class="container pt-3">
       <div class="row">
         <!-- Column 1 -->
-        <div class="col-md-4">
+        <div class="col-md-4 ">
           <h6 class="font-weight-bold">Unger Chiropractic</h6>
           <div class="h-divider mt-3 mb-3 w-50"></div>
           <p>Your journey to superior healing and total wellness can begin today.</p>
           <p>We do not discriminate. Please view our policy. Unger Chiropractic Nondiscrimination
-            policy.pdf&nbsp;<a href="#" class="button" download>
+            policy.pdf&nbsp;<a href="./pictures/Unger_Chiropractic_Clinic_Nondiscrimination_Policy.pdf" class="button"
+              download>
               <i class="fa fa-download text-white"></i></a>
           </p>
         </div>
@@ -204,18 +206,24 @@
           <h6><strong>Useful Links</strong></h6>
           <div class="h-divider mt-3 mb-3 w-50"></div>
           <nav class="nav flex-column pb-4">
-            <a class="nav-link pl-0" href="./ourDoctors.html" target="blank">Our Doctors</a>
-            <a class="nav-link pl-0" href="./services.html" target="blank">Services</a>
-            <a class="nav-link pl-0" href="./bodylight.html" target="blank">Bodylight Fat Reduction</a>
-            <a class="nav-link pl-0" href="./massage.html" target="blank">Massage</a>
-            <a class="nav-link pl-0" href="./firstVisit.html" target="blank">First Visit</a>
-            <a class="nav-link pl-0" href="./" target="blank">Patient Downloads</a>
-            <a class="nav-link pl-0" href="./cdlMedicalExam.html" target="blank">CDL Medical Exams</a>
+            <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
+            <a class="nav-link" href="./massage.html">Massage</a>
+            <a class="nav-link" href="./bodylight.html">Bodylight Fat Reduction</a>
+            <a class="nav-link" href="./beforeandafter.html">Bodylight Before and After Images</a>
+            <a class="nav-link" href="./appliedkinesology.html">Applied Kinesology</a>
+            <a class="nav-link" href="./allergyelimination.html">A/SERT</a>
+            <a class="nav-link" href="./lowlevellasertherapy.html">Low Level Laser Therapy</a>
+            <a class="nav-link" href="./detoxificationtherapy.html">Detoxification Therapy</a>
+            <a class="nav-link" href="./nutritionalconsultation.html">Nutritional Consultation</a>
+            <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
+            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
+            <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
+            <a class="nav-link" href="./contactUs.html" target="blank">Contact Us</a>
           </nav>
         </div>
         <hr>
         <!-- Column 3 -->
-        <div class="col-md-4">
+        <div class="col-md-4 ">
           <h6><strong>Contact</strong></h6>
           <div class="h-divider mt-3 mb-3 w-50"></div>
           <h6><strong>Oberlin Clinic:</strong></h6>
@@ -229,10 +237,11 @@
             St. Francis, KS 67756<br>
             Phone: (785) 332-2186
           </p>
-          <a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
-              class="fab fa-facebook-f"></i>
-
-          </a>
+          <a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><span
+              style="color:#b1edfc"><i class="fab fa-facebook-f fa-2x"></i></span>
+          </a><br>
+          <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office Hours
+            &raquo;</a>
         </div>
       </div>
     </div>
