updated html and css

--- a/public/contactUs.html
+++ b/public/contactUs.html
@@ -238,14 +238,14 @@
             Fax: (785) 475-2210
           </p>
           <h6><strong>St. Francis Clinic:</strong></h6>
-          <p>120 N Scott St
-            St., Francis KS 67756<br>
+          <p>120 N Scott St,
+            St. Francis KS 67756<br>
             Phone: (785) 332-2186
           </p>
           <a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><span
-              style="color:#b1edfc"><i class="fab fa-facebook-f fa-2x"></i></span>
+              style="color:#b1edfc"><i class="fab fa-facebook-f fa-2x" target="_blank"></i></span>
           </a><br>
-          <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office Hours
+          <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html">View Available Office Hours
             &raquo;</a>
         </div>
       </div>
@@ -257,7 +257,8 @@
   <!-- Copyright -->
   <footer class="py-2 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;2019 Unger Chiropractic Clinic. All rights
+      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;&nbsp;2019 Unger Chiropractic Clinic. All
+        rights
         reserved.</p>
   </footer>
   <!-- /.container -->
