--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
             <h5 class="card-title">Total Wellness</h5>
             <p class="card-text">We Strive to provide complete care for our patients. Our practice specializes in
               treating a variety of conditions.</p>
-            <a href="./services.html" class="btn btn-outline-primary">View Services</a>
+            <a href="./chiropractictreatment.html" class="btn btn-outline-primary" target="_blank">View Services</a>
           </div>
         </div>
       </div>
@@ -147,7 +147,7 @@
             <h5 class="card-title">Body Sculpting</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="./bodylight.html" class="btn btn-outline-primary">Read More</a>
+            <a href="./bodylight.html" class="btn btn-outline-primary" target="_blank">Read More</a>
           </div>
         </div>
       </div>
@@ -158,7 +158,7 @@
             <h5 class="card-title">Massage</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="./massage.html" class="btn btn-outline-primary">Read More</a>
+            <a href="./massage.html" class="btn btn-outline-primary" target="_blank">Read More</a>
           </div>
         </div>
       </div>
@@ -193,7 +193,8 @@
           lower back and neck pain, headaches, repetitive stress disorders, sports injuries, work injuries and whiplash.
           Our care is unique. We provide for our patients excellent chiropractic care, applied kinesiology,
           physio-therapy modalities, as well as professional nutritional counseling.</p>
-        <a href="./chiropractictreatment.html" class="btn btn-outline-primary mt-3 mb-3">View Services</a>
+        <a href="./chiropractictreatment.html" class="btn btn-outline-primary mt-3 mb-3" target="_blank">View
+          Services</a>
       </div>
       <div class="col-lg-6">
         <div class="card h-100 shadow-lg p-3 bg-white rounded border-0">
@@ -257,14 +258,14 @@
           <h6><strong>Contact</strong></h6>
           <div class="h-divider mt-3 mb-3 w-50"></div>
           <h6><strong>Oberlin Clinic:</strong></h6>
-          <p>504 N Penn Ave
-            Oberlin, KS 67749<br>
+          <p>504 N Penn Ave,
+            Oberlin KS 67749<br>
             Phone: (785) 475-2219<br>
             Fax: (785) 475-2210
           </p>
           <h6><strong>St. Francis Clinic:</strong></h6>
-          <p>120 N Scott St
-            St. Francis, KS 67756<br>
+          <p>120 N Scott St,
+            St. Francis KS 67756<br>
             Phone: (785) 332-2186
           </p>
           <a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><span
@@ -282,7 +283,8 @@
   <!-- Copyright -->
   <footer class="py-2 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;2019 Unger Chiropractic Clinic. All rights
+      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;&nbsp;2019 Unger Chiropractic Clinic. All
+        rights
         reserved.</p>
   </footer>
   <!-- /.container -->
