--- a/public/firstVisit.html
+++ b/public/firstVisit.html
@@ -187,7 +187,7 @@
         <hr>
         <address>
           <strong><span style="color:#13315C">Oberlin Clinic</span></strong>
-          <br><span style="color:#3E7CF9"><i class="fas fa-map-marker-alt"></i></span>&nbsp 504 N Penn Ave
+          <br><span style="color:#3E7CF9"><i class="fas fa-map-marker-alt"></i></span>&nbsp 504 N Penn Ave,
           Oberlin KS 67749 <a
             href="https://www.google.com/maps/search/504+N+Penn+Ave+120+N+Scott+St+Oberlin,+KS+67749/@39.8227144,-100.5312894,17z/data=!3m1!4b1"
             target="_blank"><br>(View
@@ -197,14 +197,14 @@
         </address>
         <address>
           <strong><span style="color:#13315C">St. Francis Clinic</span></strong>
-          <br><span style="color:#3E7CF9"><i class="fas fa-map-marker-alt"></i></span>&nbsp 120 N Scott St
+          <br><span style="color:#3E7CF9"><i class="fas fa-map-marker-alt"></i></span>&nbsp 120 N Scott St,
           St. Francis KS 67756 <a
             href="https://www.google.com/maps/place/120+N+Scott+St,+St+Francis,+KS+67756/@39.7750881,-101.8014507,17z/data=!4m13!1m7!3m6!1s0x877496a656b6cd91:0x316734b41ac7b6ca!2s120+N+Scott+St,+St+Francis,+KS+67756!3b1!8m2!3d39.7750463!4d-101.8012333!3m4!1s0x877496a656b6cd91:0x316734b41ac7b6ca!8m2!3d39.7750463!4d-101.8012333"
             target="_blank"><br>(View
             Map)</a>
           <br><span style="color:#3E7CF9"><i class="fas fa-phone"></i></span>&nbspPhone: (785) 332-2186
         </address>
-        <a class="btn btn-outline-primary mt-3 mb-3" href="./contactUs.html">View Available Office Hours
+        <a class="btn btn-outline-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office Hours
           &raquo;</a>
 
       </div>
@@ -280,14 +280,14 @@
           <h6><strong>Contact</strong></h6>
           <div class="h-divider mt-3 mb-3 w-50"></div>
           <h6><strong>Oberlin Clinic:</strong></h6>
-          <p>504 N Penn Ave
-            Oberlin, KS 67749<br>
+          <p>504 N Penn Ave,
+            Oberlin KS 67749<br>
             Phone: (785) 475-2219<br>
             Fax: (785) 475-2210
           </p>
           <h6><strong>St. Francis Clinic:</strong></h6>
-          <p>120 N Scott St
-            St. Francis, KS 67756<br>
+          <p>120 N Scott St,
+            St. Francis KS 67756<br>
             Phone: (785) 332-2186
           </p>
           <a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><span
@@ -305,7 +305,7 @@
   <!-- Copyright -->
   <footer class="py-2 bg-dark">
     <div class="container">
-      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;2019 Unger Chiropractic Clinic. All
+      <p class="m-0 text-center text-white" id="copyright">Copyright &copy;&nbsp;2019 Unger Chiropractic Clinic. All
         rights
         reserved.</p>
   </footer>
