updated link attributes

--- a/public/nutritionalconsultation.html
+++ b/public/nutritionalconsultation.html
@@ -20,56 +20,56 @@
 </head>
 
 <body>
-  <!-- Navigation -->
-  <nav class="navbar fixed-top navbar-expand-xl navbar-light bg-light fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="index.html">Unger Chiropractic</a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
-        aria-label="Toggle navigation">
-        <img src="./pictures/Menu_Icon.png" alt="Menu Icon">
-        <!-- <i class="fas fa-ellipsis-v"></i> -->
-      </button>
-      <div class="collapse navbar-collapse " id="navbarResponsive">
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item">
-            <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
-          </li>
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
-              href="./services.html" target="blank" aria-expanded="false">Services</a>
-            <div class="dropdown-menu">
-              <a class="dropdown-item" href="./chiropractictreatment.html">Chiropractic Treatment</a>
-              <a class="dropdown-item" href="./massage.html">Massage</a>
-              <a class="dropdown-item" href="./bodylight.html">Bodylight Fat Reduction</a>
-              <a class="dropdown-item" href="./beforeandafter.html">Bodylight Before and After Images</a>
-              <a class="dropdown-item" href="./appliedkinesology.html">Applied Kinesology</a>
-              <a class="dropdown-item" href="./allergyelimination.html">A/SERT</a>
-              <a class="dropdown-item" href="./lowlevellasertherapy.html">Low Level Laser Therapy</a>
-              <a class="dropdown-item" href="./detoxificationtherapy.html">Detoxification Therapy</a>
-              <a class="dropdown-item" href="./nutritionalconsultation.html">Nutritional Consultation</a>
-            </div>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="./contactUs.html" target="blank">Contact Us</a>
-          </li>
-          <!-- Social Icons -->
-          <li><a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
-                class="fab fa-facebook"></i></a></li>
-          <!-- /.row -->
-        </ul>
-      </div>
+<!-- Navigation -->
+<nav class="navbar fixed-top navbar-expand-xl  navbar-light bg-light fixed-top">
+  <div class="container">
+    <a class="navbar-brand" href="index.html">Unger Chiropractic</a>
+    <button class="navbar-toggler navbar-toggler-right " type="button" data-toggle="collapse"
+      data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+      aria-label="Toggle navigation">
+      <img src="./pictures/Menu_Icon.png" alt="Menu Icon">
+    </button>
+    <div class="collapse navbar-collapse " id="navbarResponsive">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="./ourDoctors.html" >Our Doctors</a>
+        </li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+            href="./services.html" target="blank" aria-expanded="false">Services</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="./chiropractictreatment.html">Chiropractic Treatment</a>
+            <a class="dropdown-item" href="./massage.html">Massage</a>
+            <a class="dropdown-item" href="./bodylight.html">Bodylight Fat Reduction</a>
+            <a class="dropdown-item" href="./beforeandafter.html">Bodylight Before and After Images</a>
+            <a class="dropdown-item" href="./appliedkinesology.html">Applied Kinesology</a>
+            <a class="dropdown-item" href="./allergyelimination.html">A/SERT</a>
+            <a class="dropdown-item" href="./lowlevellasertherapy.html">Low Level Laser Therapy</a>
+            <a class="dropdown-item" href="./detoxificationtherapy.html">Detoxification Therapy</a>
+            <a class="dropdown-item" href="./nutritionalconsultation.html">Nutritional Consultation</a>
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./firstVisit.html" >First Visit</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./patientdownloads.html" >Patient Downloads</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./cdlMedicalExam.html" >CDL Medical Exam</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="./contactUs.html" >Contact Us</a>
+        </li>
+        <!-- Social Icons -->
+        <li><a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
+              class="fab fa-facebook"></i></a></li>
+        <!-- /.row -->
+      </ul>
     </div>
-  </nav>
+  </div>
+</nav>
+<!-- End Nav -->
 
   <!-- Header -->
   <header class="py-5 mb-5" id="title-bar">
@@ -139,7 +139,7 @@
             Map)</a>
           <br><span style="color:#3E7CF9"><i class="fas fa-phone"></i></span>&nbspPhone: (785) 332-2186
         </address>
-        <a class="btn btn-outline-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office Hours
+        <a class="btn btn-outline-primary mt-3 mb-3" href="./contactUs.html" >View Available Office Hours
           &raquo;</a>
 
       </div>
@@ -157,7 +157,7 @@
         </h3>
         <h5 class="text-white text-center">Oberlin Office: 785-475-2219</h5>
         <h5 class="text-white text-center">St. Francis Clinic: 785-332-2186</h5>
-        <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office Hours
+        <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" >View Available Office Hours
           &raquo;</a>
       </div>
     </div>
@@ -184,7 +184,7 @@
           <div class="h-divider mt-3 mb-3 w-50"></div>
           <p>Your journey to superior healing and total wellness can begin today.</p>
           <p>We do not discriminate. Please view our policy. Unger Chiropractic Nondiscrimination
-            policy.pdf&nbsp;<a href="./pictures/Unger_Chiropractic_Clinic_Nondiscrimination_Policy.pdf" class="button"
+            policy.pdf&nbsp;<a href="./pictures/Unger_Chiropractic_Clinic_Nondiscrimination_Policy.pdf" target="blank" class="button"
               download>
               <i class="fa fa-download text-white"></i></a>
           </p>
@@ -203,10 +203,10 @@
             <a class="nav-link" href="./lowlevellasertherapy.html">Low Level Laser Therapy</a>
             <a class="nav-link" href="./detoxificationtherapy.html">Detoxification Therapy</a>
             <a class="nav-link" href="./nutritionalconsultation.html">Nutritional Consultation</a>
-            <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
-            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
-            <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
-            <a class="nav-link" href="./contactUs.html" target="blank">Contact Us</a>
+            <a class="nav-link" href="./firstVisit.html" >First Visit</a>
+            <a class="nav-link" href="./patientdownloads.html" >Patient Downloads</a>
+            <a class="nav-link" href="./cdlMedicalExam.html" >CDL Medical Exam</a>
+            <a class="nav-link" href="./contactUs.html" >Contact Us</a>
           </nav>
         </div>
         <hr>
@@ -228,7 +228,7 @@
           <a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><span
               style="color:#b1edfc"><i class="fab fa-facebook-f fa-2x"></i></span>
           </a><br>
-          <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office Hours
+          <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" >View Available Office Hours
             &raquo;</a>
         </div>
       </div>
