--- a/public/index.html
+++ b/public/index.html
@@ -30,12 +30,11 @@
         data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
         <img src="./pictures/Menu_Icon.png" alt="Menu Icon">
-        <!-- <i class="fas fa-ellipsis-v"></i> -->
       </button>
       <div class="collapse navbar-collapse " id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="./ourDoctors.html" target="blank">Our Doctors</a>
+            <a class="nav-link" href="./ourDoctors.html" >Our Doctors</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
@@ -53,16 +52,16 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./firstVisit.html" target="blank">First Visit</a>
+            <a class="nav-link" href="./firstVisit.html" >First Visit</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./patientdownloads.html" target="blank">Patient Downloads</a>
+            <a class="nav-link" href="./patientdownloads.html" >Patient Downloads</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./cdlMedicalExam.html" target="blank">CDL Medical Exam</a>
+            <a class="nav-link" href="./cdlMedicalExam.html" >CDL Medical Exam</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./contactUs.html" target="blank">Contact Us</a>
+            <a class="nav-link" href="./contactUs.html" >Contact Us</a>
           </li>
           <!-- Social Icons -->
           <li><a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><i
@@ -72,6 +71,7 @@
       </div>
     </div>
   </nav>
+<!-- End Nav -->
 
   <header>
     <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel" data-interval="7000">
@@ -89,7 +89,7 @@
             <h1 class="pb-3 pl-3 pr-3">Unger Chiropractic</h1>
             <h3 class="pb-4 pl-3 pr-3">Your journey to superior healing and total wellness can begin today.</h3>
             <a class="btn btn-outline-light btn-lg" href="./chiropractictreatment.html" role="button"
-              target="blank">View
+              >View
               Services</a>
           </div>
         </div>
@@ -102,7 +102,7 @@
             <h1 class="pb-3 pl-3 pr-3 text-sm-center">Unger Chiropractic</h1>
             <h3 class="pb-4 pl-3 pr-3">Your journey to superior healing and total wellness can begin today.</h3>
             <a class="btn btn-outline-light btn-lg" href="./chiropractictreatment.html" role="button"
-              target="blank">View
+              >View
               Services</a>
           </div>
         </div>
@@ -136,7 +136,7 @@
             <h5 class="card-title">Total Wellness</h5>
             <p class="card-text">We Strive to provide complete care for our patients. Our practice specializes in
               treating a variety of conditions.</p>
-            <a href="./chiropractictreatment.html" class="btn btn-outline-primary" target="_blank">View Services</a>
+            <a href="./chiropractictreatment.html" class="btn btn-outline-primary" >View Services</a>
           </div>
         </div>
       </div>
@@ -147,7 +147,7 @@
             <h5 class="card-title">Body Sculpting</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="./bodylight.html" class="btn btn-outline-primary" target="_blank">Read More</a>
+            <a href="./bodylight.html" class="btn btn-outline-primary" >Read More</a>
           </div>
         </div>
       </div>
@@ -158,7 +158,7 @@
             <h5 class="card-title">Massage</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
               content.</p>
-            <a href="./massage.html" class="btn btn-outline-primary" target="_blank">Read More</a>
+            <a href="./massage.html" class="btn btn-outline-primary" >Read More</a>
           </div>
         </div>
       </div>
@@ -176,7 +176,7 @@
         </h3>
         <h5 class="text-white text-center">Oberlin Office: 785-475-2219</h5>
         <h5 class="text-white text-center">St. Francis Clinic: 785-332-2186</h5>
-        <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office Hours
+        <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" >View Available Office Hours
           &raquo;</a>
       </div>
     </div>
@@ -193,7 +193,7 @@
           lower back and neck pain, headaches, repetitive stress disorders, sports injuries, work injuries and whiplash.
           Our care is unique. We provide for our patients excellent chiropractic care, applied kinesiology,
           physio-therapy modalities, as well as professional nutritional counseling.</p>
-        <a href="./chiropractictreatment.html" class="btn btn-outline-primary mt-3 mb-3" target="_blank">View
+        <a href="./chiropractictreatment.html" class="btn btn-outline-primary mt-3 mb-3" >View
           Services</a>
       </div>
       <div class="col-lg-6">
@@ -227,7 +227,7 @@
           <div class="h-divider mt-3 mb-3 w-50"></div>
           <p>Your journey to superior healing and total wellness can begin today.</p>
           <p>We do not discriminate. Please view our policy. Unger Chiropractic Nondiscrimination
-            policy.pdf&nbsp;<a href="./pictures/Unger_Chiropractic_Clinic_Nondiscrimination_Policy.pdf" class="button"
+            policy.pdf&nbsp;<a href="./pictures/Unger_Chiropractic_Clinic_Nondiscrimination_Policy.pdf" target="blank" class="button"
               download>
               <i class="fa fa-download text-white"></i></a>
           </p>
@@ -271,7 +271,7 @@
           <a href="https://www.facebook.com/pg/UngerChiropractic/reviews/?ref=page_internal/" target="blank"><span
               style="color:#b1edfc"><i class="fab fa-facebook-f fa-2x"></i></span>
           </a><br>
-          <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" target="_blank">View Available Office Hours
+          <a class="btn btn-primary mt-3 mb-3" href="./contactUs.html" >View Available Office Hours
             &raquo;</a>
         </div>
       </div>
