updated showcase button size

--- a/public/index.html
+++ b/public/index.html
@@ -88,7 +88,7 @@
           <div class="carousel-caption text-center">
             <h1 class="pb-3 pl-3 pr-3">Unger Chiropractic</h1>
             <h3 class="pb-4 pl-3 pr-3">Your journey to superior healing and total wellness can begin today.</h3>
-            <a class="btn btn-outline-light btn-lg" href="./chiropractictreatment.html" role="button"
+            <a class="btn btn-outline-light btn-lg btn-cta-showcase" href="./chiropractictreatment.html" role="button"
               >View
               Services</a>
           </div>
@@ -101,7 +101,7 @@
           <div class="carousel-caption text-center">
             <h1 class="pb-3 pl-3 pr-3 text-sm-center">Unger Chiropractic</h1>
             <h3 class="pb-4 pl-3 pr-3">Your journey to superior healing and total wellness can begin today.</h3>
-            <a class="btn btn-outline-light btn-lg" href="./chiropractictreatment.html" role="button"
+            <a class="btn btn-outline-light btn-lg btn-cta-showcase" href="./chiropractictreatment.html" role="button"
               >View
               Services</a>
           </div>
